<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".checklist">

    <TextView
        android:id="@+id/listitem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="8dp"
        android:background="#FFEB3B"
        android:text="@string/list_items"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center_horizontal" />


    <Button
        android:id="@+id/list_check1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="4sp"
        android:text="@string/bread"
        android:textSize="18sp"
        android:textStyle="bold"
        android:onClick="returnItem"
        app:layout_constraintBottom_toTopOf="@id/list_check2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/list_check2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="4sp"
        android:text="@string/butter"
        android:textSize="18sp"
        android:textStyle="bold"
        android:onClick="returnItem"
        app:layout_constraintBottom_toTopOf="@id/list_check3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/list_check3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="4sp"
        android:text="@string/cheese"
        android:textSize="18sp"
        android:textStyle="bold"
        android:onClick="returnItem"
        app:layout_constraintBottom_toTopOf="@id/list_check4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/list_check4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="4sp"
        android:text="@string/chocolate"
        android:textSize="18sp"
        android:textStyle="bold"
        android:onClick="returnItem"
        app:layout_constraintBottom_toTopOf="@id/list_check5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/list_check5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="4sp"
        android:text="@string/chips"
        android:textSize="18sp"
        android:textStyle="bold"
        android:onClick="returnItem"
        app:layout_constraintBottom_toTopOf="@id/list_check6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/list_check6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="4sp"
        android:text="@string/popcorn"
        android:textSize="18sp"
        android:textStyle="bold"
        android:onClick="returnItem"
        app:layout_constraintBottom_toTopOf="@id/list_check7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/list_check7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="4sp"
        android:text="@string/burger_bun"
        android:textSize="18sp"
        android:textStyle="bold"
        android:onClick="returnItem"
        app:layout_constraintBottom_toTopOf="@id/list_check8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/list_check8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="4sp"
        android:onClick="returnItem"
        android:text="@string/milk"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/list_check9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/list_check9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="4sp"
        android:text="@string/pizza_base"
        android:textSize="18sp"
        android:textStyle="bold"
        android:onClick="returnItem"
        app:layout_constraintBottom_toTopOf="@id/list_check10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/list_check10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="4sp"
        android:text="@string/cold_drink"
        android:textSize="18sp"
        android:textStyle="bold"
        android:onClick="returnItem"
        app:layout_constraintBottom_toTopOf="@id/list_check11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/list_check11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="4sp"
        android:text="@string/mad_angles"
        android:textSize="18sp"
        android:textStyle="bold"
        android:onClick="returnItem"
        app:layout_constraintBottom_toTopOf="@id/list_check12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/list_check12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="4sp"
        android:text="@string/kurkure"
        android:textSize="18sp"
        android:textStyle="bold"
        android:onClick="returnItem"
        app:layout_constraintBottom_toTopOf="@id/list_check13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/list_check13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="4sp"
        android:text="@string/dairy_milk"
        android:textSize="18sp"
        android:textStyle="bold"
        android:onClick="returnItem"
        app:layout_constraintBottom_toTopOf="@id/list_check14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/list_check14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="4sp"
        android:text="@string/milk_bar"
        android:textSize="18sp"
        android:textStyle="bold"
        android:onClick="returnItem"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>